# optimization-pt4

./: .gitignore  Cargo.toml  LICENSE  LICENSE-BSD  NOTICE  README.md  input.toml  pyproject.toml
report/: report.tex  report.typ
src/: config.rs  main.py  main.rs  tasks.rs
src/tasks/: bisection.rs  golden_section.rs  gradient_ascent.rs
