[tool.poetry]
name = "optimization-pt2"
version = "0.1.0"
description = "B23-ISE-02"
authors = [
  "Arsen Galiev <a.galiev@innopolis.university>",
  "Asqar Arslanov <a.arslanov@innopolis.university>",
  "Ilya-Linh Nguen <i.nguen@innopolis.university>",
  "Kirill Efimovich <k.efimovich@innopolis.university>",
]
license = "SOL and BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/quintet-sdr/optimization-pt2"
packages = [{ include = "*", from = "src/" }]

[tool.poetry.scripts]
launch = "src.main:main"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
pyright = "^1.1.384"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
